Fixed annoying thing where transparent gallery images were hard to see when expanded.

--- a/projects/project.css
+++ b/projects/project.css
@@ -76,6 +76,7 @@ h1, h2, h3, h4, h5 {
 }
 
 .enlarged {
+    background-color: white;
     position: fixed;
     top: 35%;
     left: 40%;
